<resources>
    <string name="app_name">dosa</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forward">Quên mật khẩu?</string>
    <string name="login">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="do_not_have_an_account">Không có tài khoản ? </string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="signup">Đăng ký</string>
    <string name="name">Tên</string>
    <string name="already_have_an_account">Đã có tài khoản ?</string>
    <string name="code">Nhập mã</string>
    <string name="otp">Mã OTP </string>
    <string name="comfirm">Xác nhận</string>
    <string name="passnew">Mật khẩu mới</string>
    <string name="comfirmpass">Xác nhận mật khẩu </string>
    <string name="update">Cập nhật</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm ...</string>
    <string name="logout">Đăng xuất</string>
    <string name="example">The world’s happiest countries for 2023</string>
    <string name="LalisaManobal">Lalisa Manobal</string>
    <string name="tudien">Từ điển</string>
    <string name="khotu">Kho từ</string>
    <string name="account">Tài khoản</string>
    <string name="Student">Student</string>
    <string name="Myaccount">Tài khoản của tôi</string>
    <string name="removehistory">Xóa lịch sử</string>
    <string name="yesterday">Hôm qua</string>
    <string name="sevenday">7 ngày trước</string>
    <string name="Optimism">Optimism</string>
    <string name="noun">noun</string>
    <string name="UK">UK</string>
    <string name="EN">EN</string>
    <string name="VN">VN</string>
    <string name="Setting">Cài đặt</string>
    <string name="Select_the_correct_answer">Select the correct answer</string>
    <string name="Vintage">Vintage</string>
    <string name="continues">Tiếp theo</string>
    <string name="Co_chu">Cỡ chữ</string>
    <string name="small">Nhỏ</string>
    <string name="vua">Vừa</string>
    <string name="Phong_chu">Phông chữ</string>
    <string name="Example">Example</string>
    <string name="Kho_tu">Kho từ</string>
    <string name="big">Lớn</string>
    <string name="facebook_app_id">4329453160612368</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">6d0efe1fb889e12f38181adeae51e875</string>
    <string name="default_web_client_id">1043243372297-cd3f11rhbn68qtltlhpq4bd4tpr1chet.apps.googleusercontent.com</string>
    <string name="newsapi_apikey">pub_18958d7fe053164d0446e21c6e74e317b42f3</string>
</resources>