<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/contraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/custom_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/txtSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Setting"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/linnear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/img_37"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:textSize="26sp"
            android:text="@string/Co_chu"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="14sp"
            android:text="@string/small"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/vua"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="20sp"
            android:text="@string/big"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/linnear1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linnear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/img_38"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:textSize="26sp"
            android:text="@string/Phong_chu"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="15sp"
            android:text="Times New Roman"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>